--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@react2svelte/swipeable": "^0.1.4"
+		"@react2svelte/swipeable": "^0.1.4",
+		"@types/papaparse": "^5.3.15",
+		"papaparse": "^5.5.2",
+		"svelte-select": "^5.8.3"
 	}
 }
