--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@react2svelte/swipeable": "^0.1.4",
 		"@types/papaparse": "^5.3.15",
+		"dexie": "^4.0.11",
 		"papaparse": "^5.5.2",
 		"svelte-select": "^5.8.3"
 	}
