--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-svelte"],
+  "svelteSortOrder": "options-scripts-markup-styles",
+  "svelteStrictMode": false,
+  "svelteAllowShorthand": true
 }
