--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react2svelte/swipeable": "^0.1.4",
     "@types/papaparse": "^5.3.15",
     "dexie": "^4.0.11",
+    "geo-coordinates-parser": "^1.7.4",
     "nanoid": "^5.1.5",
     "papaparse": "^5.5.2",
     "svelte-select": "^5.8.3"
