--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/papaparse": "^5.3.15",
     "dexie": "^4.0.11",
     "geo-coordinates-parser": "^1.7.4",
+    "maplibre-gl": "^5.3.0",
     "nanoid": "^5.1.5",
     "papaparse": "^5.5.2",
     "svelte-select": "^5.8.3"
